--- a/css/style.css
+++ b/css/style.css
@@ -1,400 +1,612 @@
-@font-face {
-    font-family: 'Montserrat';
-    src: url('../src/fonts/Montserrat-Medium.woff2') format('woff2');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: url('../src/fonts/Montserrat-Regular.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
+/* Общие стили */
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    max-width: 1400px;
-    margin: 0 auto;
-    font-style: normal;
-    font-weight: 400;
+    min-width: 1200px;
     font-size: 18px;
     line-height: 30px;
-    background: #EFE6E4;
+    font-family: "Montserrat", Arial, sans-serif;
+    font-weight: normal;
     color: #533738;
+    background-color: #e5e5e5;
 }
 
-.main-heading {
-    font-weight: 400;
-    font-size: 50px;
-    line-height: 62px;
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+a {
+    color: #533738;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #cc8b86;
+}
+
+a:focus {
+    color: #99544f;
+}
+
+.visually-hidden:not(:focus):not(:active) {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    margin: -1px;
+    padding: 0;
+    width: 1px;
+    height: 1px;
+    border: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+}
+
+.container {
+    margin: 0 auto;
+    width: 1036px;
+}
+
+.wide-container {
+    margin: 0 auto;
+    width: 1200px;
 }
 
 .button {
+    display: inline-block;
+    vertical-align: middle;
+    box-sizing: border-box;
+    padding: 26px 69px;
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
-    color: #533738;
-    background: #CC8B86;
-    text-decoration: none;
-    border: none;
-    padding: 25px 67px;
+    border: 2px solid #cc8b86;
+    background-color: #cc8b86;
 }
 
-.promo {
-    background-image: url(../src/images/main-bg1.jpg);
-    background-repeat: no-repeat;
-    height: 715px;
+.button:hover {
+    color: #cc8b86;
+    border-color: white;
+    background-color: white;
+}
+
+.button:focus {
+    color: #99544f;
+    border: 2px solid #99544f;
+    background-color: white;
+}
+
+.section-heading {
+    margin-top: 0;
+    margin-bottom: 40px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 50px;
+}
+
+/* Стили для шапки */
+
+.page-header {
+    margin-bottom: -110px;
+}
+
+.page-header .wide-container {
+    display: flex;
+    align-items: baseline;
+    padding-top: 36px;
+    padding-bottom: 46px;
+}
+
+.logo {
+    display: flex;
+    align-items: flex-end;
+    align-self: normal;
+    margin-right: 83px;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.nav-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    margin-right: 42px;
+    padding: 0;
+    list-style: none;
+}
+
+.nav-item {
+    margin-right: 23px;
+}
+
+.nav-item:last-child {
+    margin-right: 0;
 }
 
 .nav-link {
-    text-decoration: none;
-    color: #533738;
-    font-weight: 400;
     font-size: 16px;
     line-height: 20px;
 }
 
 .phone {
-    font-weight: 400;
     font-size: 16px;
     line-height: 20px;
-    text-decoration: none;
-    color: #533738;
 }
 
-.section-title {
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 50px;
-    text-transform: uppercase;
-}
-
-.form-title {
-    color: #FFFFFF;
-}
-
-.form-description {
-    color: #FFFFFF;
-    opacity: 0.6;
-}
-
-.form-inputs {
-    color: #F6EDE9;
-}
-
-.font-size-50 {
-    font-weight: 400;
-    font-size: 50px;
-    line-height: 62px;
-    margin-bottom: 20px;
-}
-
-.metrics {
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 37px;
-    text-transform: uppercase;
-    color: #FFFFFF;
-}
-
-.profits {
-    background: #8D7370;
-}
-
-.other-photos-link {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 37px;
-    color: #533738;
-}
-
-.other-photos-link::after {
-    content: url(../src/images/arrow.svg);
-    padding-left: 10px;
-}
-
-.team, .how-we-work {
-    background: #E2C4BA;
-}
-
-.form {
-    background: #8D7370;
-}
+/* Стили для промо блока */
 
 .promo {
-    margin-bottom: 65px;
+    padding-top: 150px;
+    padding-bottom: 166px;
+    background-color: #ded7cb;
+    background-image: url("../img/promo.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-.main-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    padding-top: 14px;
-    max-height: 25px;
-    max-width: 1200px;
-    margin-left: 98px;
-    margin-bottom: 113px;
-}
-
-.header-links {
-    display: flex;
-}
-
-.header-links li {
-    display: block;
-    margin: 0 auto;
-    padding-right: 20px;
-}
-
-.header-links li a {
-    padding: 5px;
-}
-
-.header-links li:last-child {
-    padding: 0;
-}
-
-.main {
-    max-width: 534px;
-    margin-left: 184px;
+.promo-text {
+    width: 46%;
 }
 
 .main-heading {
-    margin-bottom: 20px;
+    margin-top: 0;
+    margin-bottom: 21px;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 62px;
 }
 
 .promo-description {
-    height: 90px;
-    margin-bottom: 48px;
+    margin-top: 0;
+    margin-bottom: 21px;
 }
 
-.about-heading {
-    text-align: center;
-    margin-bottom: 40px;
+/* Стили для блока "О нас" */
+
+.about {
+    padding-top: 65px;
+    padding-bottom: 20px;
 }
 
-.about-container {
+.half-wrap {
     display: flex;
-    margin-left: 182px;
-    margin-right: 182px;
-    gap: 63px;
-    padding-bottom: 4px;
 }
 
-.about-text {
-    align-self: baseline;
+.about-img {
+    align-self: flex-start;
+    margin-right: 64px;
 }
 
-.paragraph-about {
-    margin: 0px;
-    margin-bottom: 30px
+.text-wrap {
+    width: 50%;
 }
 
-.profits-list {
+.text-wrap p {
+    margin-top: 0;
+    margin-bottom: 29px;
+}
+
+/* Стили для преимуществ */
+
+.advantages {
+    padding-top: 85px;
+    padding-bottom: 80px;
+    color: white;
+    background-color: #8d7370;
+}
+
+.advantages-list {
     display: flex;
     justify-content: space-between;
-    height: 273px;
-    align-items: center;
-    margin-left: 142px;
-    margin-right: 182px;
-}
-
-.metrics {
-    display: block;
-    text-align: center;
-}
-
-.portfolio {
-    display: grid;
-    margin: 65px 100px;
-    width: 1200px;
-    row-gap: 7px;
-}
-
-.portfolio-heading {
-    margin-top: 0;
-}
-
-.images-container {
-    display: flex;
     flex-wrap: wrap;
-    gap: 30px 20px;
-    margin-bottom: 31px;
-}
-
-.other-photos-link {
-    text-align: center; 
-}
-.team-heading {
-    text-align: center;
-    padding-top: 50px;
-}
-
-.team-container {
-    display: flex;
-    margin-right: 182px;
-    margin-left: 182px;
-    gap: 38px;
-}
-
-.team-member {
-    align-self: baseline;
     margin: 0;
     padding: 0;
-    margin-top: 8px;
+    list-style: none;
 }
 
-.process-heading {
-    margin-left: 512px;
-    padding-bottom: 10px;
+.advantages-item {
+    text-align: center;
+}
+
+.advantages-item span {
+    display: block;
+    margin-bottom: 7px;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 62px;
+}
+
+.advantages-item p {
+    margin: 0;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 37px;
+}
+
+/* Стили для работ */
+
+.works {
+    padding-top: 65px;
+    padding-bottom: 65px;
+}
+
+.works .section-heading {
+    text-align: left;
+}
+
+.works-grid {
+    display: grid;
+    grid-template-columns: 5fr 2fr 5fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 30px;
+}
+
+.works-item {
+    position: relative;
+}
+
+.works-item:nth-child(4n + 2) {
+    grid-column: 2 / -1;
+}
+
+.works-item:nth-child(4n + 3) {
+    grid-column: 1 / 3;
+}
+
+.works-item:nth-child(4n + 4) {
+    grid-column: 3 / -1;
+}
+
+.works-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.works-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    box-sizing: border-box;
+    padding-top: 86px;
+    padding-right: 35px;
+    padding-left: 35px;
+    width: 100%;
+    height: 100%;
+    color: white;
+    background-color: rgba(100, 72, 69, 0.8);
+}
+
+.works-item:hover .works-hover {
+    z-index: 2;
+}
+
+.works-heading {
+    margin: 0 auto;
+    margin-top: 0;
+    margin-bottom: 15px;
+    max-width: 270px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 37px;
+}
+
+.works-text {
+    display: -webkit-box;
+    overflow-y: hidden;
+
+    -webkit-line-clamp: 8;
+    -webkit-box-orient: vertical;
+}
+
+.more {
+    display: block;
+    margin-top: 37px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 37px;
+}
+
+.more svg {
+    margin-left: 10px;
+}
+
+.more:hover path {
+    fill: #cc8b86;
+}
+
+.more:focus path {
+    fill: #99544f;
+}
+
+/* Стили для команды */
+
+.team {
+    padding-top: 50px;
+    padding-bottom: 60px;
+    background-color: #e2c4ba;
+}
+
+.team-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 0;
+    margin-bottom: 18px;
+    padding: 0;
+    list-style: none;
+}
+
+.team-item {
+    margin-bottom: 20px;
+    width: 31%;
+}
+
+.team-img {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.team-text {
+    margin: 0;
 }
 
 .process-list {
     display: flex;
-    padding-bottom: 80px;
-    width: 1200px;
-    margin: 0 auto;
-    gap: 20px;
-}
-
-.process-point {
-    display: block;
+    flex-wrap: wrap;
     margin: 0;
+    margin-top: 40px;
     padding: 0;
-    margin-top: 10px;
-    width: 280px;
-    position: relative;
-    padding-top: 10px;
-    text-align: center;
-    
+    list-style: none;
+    /*    counter-reset: section;*/
 }
 
-.process-list-radius{
+.process-item {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    width: 25%;
+}
+
+.process-item span {
     display: flex;
     justify-content: center;
-    color: white;
     align-items: center;
+    margin: 0 auto;
+    margin-bottom: 20px;
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    background-color: #8D7370;;
-    margin:auto;
+    background-color: #8d7370;
+    color: white;
     font-weight: 500;
     font-size: 30px;
     line-height: 30px;
-    margin-bottom: 10px;
-}
-.review-heading {
-    margin-left: 615px;
-    margin-top: 64px;
 }
 
-.process-list-radius-conteiner{
-    display:block;
-    margin: 0 auto;
-}
+/*
 
-.review-container {
+Более правильный вариант с использованием счётчика и псевдоэлемента:
+https://developer.mozilla.org/ru/docs/Web/CSS/CSS_Lists_and_Counters/Using_CSS_counters
+
+.process-item::before {
+    counter-increment: section;
+    content: counter(section);
+    width: 70px;
+    height: 70px;
     display: flex;
-    position: relative;
-    max-width: 1056px;
-    margin: 0 auto;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-}
+    margin: 0 auto;
+    margin-bottom: 20px;
 
-.review-images, .review-text {
-    flex-basis: 407px;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 30px;
+    color: white;
+
+    background-color: #8D7370;
+    border-radius: 50%;
+}
+*/
+
+.process-item p {
     margin: 0;
+    text-align: center;
 }
 
-.arrow-left {
-    position: absolute;
-    top: 243px;
-    left: 10px;
-}
-
-.arrow-right {
-    position: absolute;
-    top: 243px;
-    right: 10px;
-}
-
-.living-room-image {
-    margin-bottom: 16px;
-}
-
-.inner-review-author {
-    margin-top: 20px;
-    text-emphasis: none;
-}
+/* Стили для отзывов */
 
 .reviews {
-    margin-bottom: 60px;
+    padding-top: 65px;
+    padding-bottom: 65px;
 }
+
+.reviews-slider {
+    position: relative;
+    padding-right: 100px;
+    padding-left: 100px;
+}
+
+.reviews-pagination {
+    position: absolute;
+    top: 48%;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    transform: translateY(-50%);
+}
+
+.reviews-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    width: 68px;
+    height: 68px;
+    border: 2px solid #cc8b86;
+    border: none;
+    border-radius: 50%;
+    background-color: #cc8b86;
+}
+
+.reviews-button:hover {
+    background-color: white;
+}
+
+.reviews-button:hover path,
+.reviews-button:focus path {
+    fill: #cc8b86;
+}
+
+.reviews-button:focus {
+    border: 2px solid #cc8b86;
+    background-color: white;
+}
+
+.reviews-button-prev svg {
+    transform: rotate(180deg);
+}
+
+.reviews-slide {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 20px;
+}
+
+.reviews-slide {
+    display: none;
+}
+
+.reviews-slide:first-child {
+    display: grid;
+}
+
+.reviews-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.reviews-text p {
+    margin-top: 0;
+    margin-bottom: 30px;
+}
+
+.reviews-text p:last-child {
+    margin-bottom: 0;
+}
+
+.reviews-author {
+    margin-bottom: 0;
+    text-transform: uppercase;
+}
+
+.reviews-images img {
+    display: block;
+    margin-bottom: 24px;
+}
+
+.reviews-images img:last-child {
+    margin-bottom: 0;
+}
+
+/* Стили для формы */
 
 .form {
+    background-color: #8d7370;
+    color: white;
+}
+
+.form .wide-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.form-wrap {
+    padding-top: 50px;
+    padding-right: 20px;
+    padding-bottom: 50px;
+    padding-left: 82px;
+}
+
+.form-wrap .section-heading {
+    margin-bottom: 24px;
+    text-align: left;
+}
+
+.form-text {
+    margin-bottom: 34px;
+}
+
+.form-action p {
+    position: relative;
+    margin: 0;
+    margin-bottom: 24px;
+}
+
+.text-input {
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 13px;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid white;
+    background-color: transparent;
+    color: white;
+}
+
+.text-input:focus + .input-label,
+.text-input:valid:not(:placeholder-shown) + .input-label {
+    bottom: 40px;
+    transition: 0.2s ease-in;
+}
+
+.input-label {
+    position: absolute;
+    bottom: 11px;
+    left: 0;
+    transition: 0.2s ease-in;
+}
+
+.submit-button {
+    margin-top: 7px;
+}
+
+.map {
+    width: auto;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Стили для подвала */
+
+.page-footer .wide-container {
     display: flex;
-    margin: 0 auto; 
-    padding-left: 181px;
-    gap: 20px;
+    align-items: center;
+    padding-top: 37px;
+    padding-bottom: 37px;
 }
 
-.form-inputs {
-    border-bottom: 1px solid red;
-    outline: none;
+.page-footer .phone {
+    font-size: 18px;
+    line-height: 30px;
 }
 
-.form-row {
+.adress {
+    margin-top: 0;
+    margin-right: auto;
     margin-bottom: 0;
-    color: #F6EDE9;
-    width: 508px;
- }
-.form-inner {
-    max-width: 508px;
+    margin-left: 42px;
 }
 
- .form-row input[type="text"], .form-row input[type="tel"]{
-    width: 490px;
-    padding: 0 10px;
-    line-height: 0;
-    border-width: 0;
-    border-top: 1px solid #F6EDE9;
-    outline: none;
-    background: transparent;
-    background-size: 8px 20px;
-    color: #F6EDE9;
-    margin-bottom: 15px;
- }
-
- .submit {
-    margin-top: 3px;
-    width: 309px;
-    text-align: center;
- }
-
- .form-title {
-    margin-top: 50px;
-    margin-bottom: 20px;
- }
-
- .form-description {
-    margin-bottom: 45px;
- }
-
- .main-footer {
-    display: flex;
-    max-width: 1200px;
-    margin: 0 auto;
-    justify-content: space-between;
-    margin-top: 35px;
- }
-
- .address {
-    margin-left: 39px;
- }
+.copyright {
+    margin: 0;
+}
